--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy
-torch==1.1.0
+torch
 tqdm
 pytest
 pyyaml
 tensorboardX
-git+https://github.com/Hiroshiba/pytorch-trainer@1.1.0
+git+https://github.com/Hiroshiba/pytorch-trainer@1.2.0
