--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pytest
 pyyaml
 tensorboardX
 tensorboard
-wandb==0.10.12
+wandb
 git+https://github.com/Hiroshiba/pytorch-trainer@1.3.1
 git+https://github.com/Hiroshiba/acoustic_feature_extractor@7cab860d9623c34a6ce818ff87c0c14a9ed60231
 git+https://github.com/lessw2020/Ranger-Deep-Learning-Optimizer@a170e3dac6443763961d0cb7a16294e4f45f93e4
