--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ tensorboardX
 tensorboard
 wandb
 git+https://github.com/Hiroshiba/pytorch-trainer@1.3.1
-git+https://github.com/Hiroshiba/acoustic_feature_extractor@c7365f7f136d744ebf0dd2239a244a856e9ebf4d
+git+https://github.com/Hiroshiba/acoustic_feature_extractor
 git+https://github.com/Hiroshiba/Ranger-Deep-Learning-Optimizer@f61690880d44acd6e53ddf9ab2302d8cdffa84fb
